--- a/header.tex
+++ b/header.tex
@@ -52,6 +52,7 @@
 \newcommand\reportChange{\delta}
 
 \usepackage{pict2e}
+\usepackage{algorithm2e}
 
 % \defbeamertemplate{title~page}{jesse~normal}{
 % 	\ifx\insertframetitle\@empty\else\vspace*{-3em}\fi
