--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -74,7 +74,13 @@
 
 \begin{frame}{Synonyms and Definitions}
 
-There are several terms that have been used as synonyms with state space models (SSMs):
+State Space Models (SSMs) are used for time series analysis \citep{durbin12}.
+
+\begin{itemize}
+  \item Highly interpretable, used to aid computations, and useful for modeling real-world mechanisms.
+\end{itemize}
+
+There are several terms that have been used as synonyms with SSMs:
 
 \begin{itemize}
   \item Mechanistic model
@@ -177,9 +183,9 @@ I chose SSM for the title as it is the terminology that potential collaborators 
 
 \begin{frame}{Remaining Chapters and Outline}
   \begin{itemize}
-    \item \alert{Chapter~2:} Inference for ARMA models.
+    \item \alert{Chapter~2:} Inference for $\mathrm{ARMA}$ models.
       \begin{itemize}
-        \item ARMA models are a special type of linear Gaussian SSMs, and are an important part of modern science (In review). 
+        \item $\mathrm{ARMA}$ models are a special type of linear Gaussian SSMs, and are an important part of modern science (In review). 
       \end{itemize}
     \item \alert{Chapter~3:} Mechanistic models for modeling cholera \citep{wheeler24}.
       \begin{itemize}
